<resources>
    <string name="app_name">IntegralMED</string>
    <string name="text_view_login">LOGIN</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="button_login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="title_create_an_account">CREATE AN ACCOUNT</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="terms_and_condition">I agree to the Terms and condition</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="error_first_name">Please enter first name</string>
    <string name="error_last_name">Please enter last name</string>
    <string name="error_email">Please enter email</string>
    <string name="error_password">Please enter password</string>
    <string name="error_confirm_password">Please enter confirm password</string>
    <string name="error_password_mismatch">Password and confirm password mismatch</string>
    <string name="error_check_box_terms_and_condition">Please agree terms and condition</string>
    <string name="error_details_valid">Your details are valid</string>
    <string name="please_wait">Please wait...</string>
    <string name="register_successful">Your details are valid</string>
    <string name="complete_profile">COMPLETE PROFILE</string>
    <string name="phone">Phone number</string>
    <string name="save">SAVE</string>
    <string name="image">Image</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="error_phone">Please enter phone number</string>
    <string name="msg_profile_updating_success">Profile updating success</string>
    <string name="title_activity_database_search">DatabaseSearchActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_description">Enter your username and email address we\'ll send you an email to reset your password</string>
    <string name="submit">SUBMIT</string>
    <string name="forgot_email_success">Forgot email success</string>
    <string name="double_exit_message">Please press back to exit</string>
    <string name="hospital_name" >Hospital name</string>
    <string name="medical_equipment">Medical equipment</string>
</resources>