<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/frame_layout_forgot_password_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/frame_layout_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_header_image"
            android:scaleType="fitXY" />
    </FrameLayout>


    <com.example.integralmed.utils.IMEDTextViewBold
        android:id="@+id/text_view_forgot_password_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:gravity="center_horizontal"
        android:text="@string/title_forgot_password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/header_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_forgot_password_header_image" />

    <com.example.integralmed.utils.IMEDTextView
        android:id="@+id/text_view_forgot_password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_description"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/description_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_forgot_password_tittle" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_forgot_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:hint="@string/email_id"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintTop_toBottomOf="@id/text_view_forgot_password_description">

        <com.example.integralmed.utils.IMEDEditText
            android:id="@+id/edit_text_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edit_text_padding"
            android:text="abs@gmail.com"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/edit_text_text_size" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.example.integralmed.utils.IMEDButton
        android:id="@+id/button_forgot_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/button_padding"
        android:text="@string/submit"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_forgot_password" />

</androidx.constraintlayout.widget.ConstraintLayout>